resources/demo-app/authorization-policy-admin.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-jwt
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: demo-app
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      when:
      - key: request.auth.claims[realm_access][roles]
        values: ["admin"]
